--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "typescript": "4.9.5",
     "uuid": "^9.0.0",
+    "websocket-stream": "^5.5.2",
     "ws": "^8.13.0"
   },
   "devDependencies": {
