--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test" : "npx cypress open"
   },
   "dependencies": {
     "@httptoolkit/websocket-stream": "^6.0.1",
-    "@types/node": "18.15.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
@@ -25,6 +23,10 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.1"
+    "@types/node": "18.15.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/uuid": "^9.0.1",
+    "cypress": "^12.9.0"
   }
 }
