--- a/package.json
+++ b/package.json
@@ -22,16 +22,12 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
-<<<<<<< Updated upstream
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
-=======
+    "tailwindcss": "^3.3.1",
     "@types/node": "18.15.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@types/uuid": "^9.0.1"
->>>>>>> Stashed changes
   }
 }
