--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "tailwindcss": "^3.3.1",
     "@types/node": "18.15.2",
     "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/react-dom": "18.0.11"
   }
 }
