--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "shaka-player": "^4.3.5",
     "typescript": "4.9.5",
@@ -22,12 +23,12 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@types/node": "18.15.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1",
-    "@types/node": "18.15.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11"
+    "tailwindcss": "^3.3.1"
   }
 }
