--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@httptoolkit/websocket-stream": "^6.0.1",
+    "@types/cypress": "^1.1.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "shaka-player": "^4.3.5",
     "typescript": "4.9.5",
     "uuid": "^9.0.0",
